--- a/DuiMini/DuiMini.vcxproj.filters
+++ b/DuiMini/DuiMini.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClInclude Include="Control\UIButton.h">
       <Filter>头文件\Control</Filter>
     </ClInclude>
+    <ClInclude Include="Control\UIText.h">
+      <Filter>头文件\Control</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="StdAfx.cpp">
@@ -234,6 +237,9 @@
       <Filter>源文件\Control</Filter>
     </ClCompile>
     <ClCompile Include="Control\UIButton.cpp">
+      <Filter>源文件\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\UIText.cpp">
       <Filter>源文件\Control</Filter>
     </ClCompile>
   </ItemGroup>
