--- a/DuiMini/DuiMini.vcxproj
+++ b/DuiMini/DuiMini.vcxproj
@@ -71,9 +71,8 @@
     <ClInclude Include="DuiMini.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="StdAfx.h" />
-    <ClInclude Include="thirdpart\rapidxml\rapidxml.hpp" />
-    <ClInclude Include="thirdpart\rapidxml\rapidxml_print.hpp" />
-    <ClInclude Include="thirdpart\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="thirdpart\pugixml\pugiconfig.hpp" />
+    <ClInclude Include="thirdpart\pugixml\pugixml.hpp" />
     <ClInclude Include="thirdpart\zlib\ioapi.h" />
     <ClInclude Include="thirdpart\zlib\iowin32.h" />
     <ClInclude Include="thirdpart\zlib\unzip.h" />
@@ -104,6 +103,20 @@
     <ClCompile Include="Core\UIWindow.cpp" />
     <ClCompile Include="DuiMini.cpp" />
     <ClCompile Include="StdAfx.cpp" />
+    <ClCompile Include="thirdpart\pugixml\pugixml.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-Static|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-Static|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release-Unicode|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug-Unicode|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="thirdpart\zlib\ioapi.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release-StaticUnicode|x64'">true</ExcludedFromBuild>
