--- a/DuiMini/DuiMini.vcxproj.filters
+++ b/DuiMini/DuiMini.vcxproj.filters
@@ -64,6 +64,18 @@
     <Filter Include="源文件\thirdpart\pugixml">
       <UniqueIdentifier>{c46391ee-ebb2-4450-b3ea-f8f3ec6f9e64}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\Control\Atom">
+      <UniqueIdentifier>{67788d46-542a-4bd4-a5ef-d69018e68bbc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Control\Atom">
+      <UniqueIdentifier>{849aeb04-0c5b-46b2-aa6e-c6596235615d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\Control\Basic">
+      <UniqueIdentifier>{4b32dc53-3c3c-46c7-b035-56c96cae6614}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Control\Basic">
+      <UniqueIdentifier>{267fee0c-f47a-4ddf-a880-25fa862cec76}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DuiMini.h">
@@ -138,20 +150,8 @@
     <ClInclude Include="Core\Render\UIRenderGDIP.h">
       <Filter>头文件\Core\Render</Filter>
     </ClInclude>
-    <ClInclude Include="Control\UIDialog.h">
-      <Filter>头文件\Control</Filter>
-    </ClInclude>
-    <ClInclude Include="Control\UIImage.h">
-      <Filter>头文件\Control</Filter>
-    </ClInclude>
     <ClInclude Include="Core\UIConfig.h">
       <Filter>头文件\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Control\UIButton.h">
-      <Filter>头文件\Control</Filter>
-    </ClInclude>
-    <ClInclude Include="Control\UIText.h">
-      <Filter>头文件\Control</Filter>
     </ClInclude>
     <ClInclude Include="thirdpart\pugixml\pugiconfig.hpp">
       <Filter>源文件\thirdpart\pugixml</Filter>
@@ -161,6 +161,18 @@
     </ClInclude>
     <ClInclude Include="Utils\UIXmlLoader.h">
       <Filter>头文件\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Control\Atom\UIImage.h">
+      <Filter>头文件\Control\Atom</Filter>
+    </ClInclude>
+    <ClInclude Include="Control\Atom\UIText.h">
+      <Filter>头文件\Control\Atom</Filter>
+    </ClInclude>
+    <ClInclude Include="Control\Basic\UIButton.h">
+      <Filter>头文件\Control\Basic</Filter>
+    </ClInclude>
+    <ClInclude Include="Control\Layout\UIDialog.h">
+      <Filter>头文件\Control\Layout</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -224,23 +236,23 @@
     <ClCompile Include="Core\UIConfig.cpp">
       <Filter>源文件\Core</Filter>
     </ClCompile>
-    <ClCompile Include="Control\UIDialog.cpp">
-      <Filter>源文件\Control</Filter>
-    </ClCompile>
-    <ClCompile Include="Control\UIImage.cpp">
-      <Filter>源文件\Control</Filter>
-    </ClCompile>
-    <ClCompile Include="Control\UIButton.cpp">
-      <Filter>源文件\Control</Filter>
-    </ClCompile>
-    <ClCompile Include="Control\UIText.cpp">
-      <Filter>源文件\Control</Filter>
-    </ClCompile>
     <ClCompile Include="thirdpart\pugixml\pugixml.cpp">
       <Filter>源文件\thirdpart\pugixml</Filter>
     </ClCompile>
     <ClCompile Include="Utils\UIXmlLoader.cpp">
       <Filter>源文件\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\Atom\UIImage.cpp">
+      <Filter>源文件\Control\Atom</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\Atom\UIText.cpp">
+      <Filter>源文件\Control\Atom</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\Basic\UIButton.cpp">
+      <Filter>源文件\Control\Basic</Filter>
+    </ClCompile>
+    <ClCompile Include="Control\Layout\UIDialog.cpp">
+      <Filter>源文件\Control\Layout</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
