--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -1,1 +1,8 @@
+# we need C++11
+set(CMAKE_CXX_STANDARD 11)
+
+if(MSVC)
+	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
+
 add_subdirectory("ResPacker")
