--- a/thirdpart/miniz/CMakeLists.txt
+++ b/thirdpart/miniz/CMakeLists.txt
@@ -5,4 +5,5 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	add_definitions(-D_LARGEFILE64_SOURCE)
 endif()
 
-add_library(miniz "miniz.c")
+add_library(miniz STATIC "miniz.c")
+set_property(TARGET miniz PROPERTY POSITION_INDEPENDENT_CODE ON)
