--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ env:
     - CMAKE_SHARED=off
 
 matrix:
+  exclude:
+  - os: osx
+    env: CMAKE_SHARED=on
+
+matrix:
   fast_finish: true
 
 before_install:
@@ -28,9 +33,14 @@ before_script:
   - cmake --version
   - mkdir build
   - cd build
-  - if [ $TRAVIS_OS_NAME == windows ]; then cmake -G "Visual Studio 15 2017 Win64" -DBUILD_SHARED_LIBS=$CMAKE_SHARED -DCMAKE_BUILD_TYPE=Release ..; fi
-  - if [ $TRAVIS_OS_NAME != windows ]; then cmake -DBUILD_SHARED_LIBS=$CMAKE_SHARED -DCMAKE_BUILD_TYPE=Release ..; fi
+  - if [ $TRAVIS_OS_NAME == windows ]; then cmake -G "Visual Studio 15 2017 Win64" -DBUILD_SHARED_LIBS=$CMAKE_SHARED -DCMAKE_BUILD_TYPE=Release -DDUI_BUILD_TESTS=on ..; fi
+  - if [ $TRAVIS_OS_NAME != windows ]; then cmake -DBUILD_SHARED_LIBS=$CMAKE_SHARED -DCMAKE_BUILD_TYPE=Release -DDUI_BUILD_TESTS=on ..; fi
 
 script:
   - if [ $TRAVIS_OS_NAME == windows ]; then export PATH=$MSBUILD_PATH:$PATH && MSBuild.exe Project.sln -p:Configuration=Release -verbosity:minimal; fi
   - if [ $TRAVIS_OS_NAME != windows ]; then make; fi
+
+jobs:
+  include:
+    - stage: test
+      script: ctest
