--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ before_script:
 
 script:
   - if [ $TRAVIS_OS_NAME == windows ]; then export PATH=$MSBUILD_PATH:$PATH && MSBuild.exe Project.sln -p:Configuration=Release -verbosity:minimal; fi
-  - if [ $TRAVIS_OS_NAME == windows && $CMAKE_SHARED == off ]; then ctest -C Release; fi
+  - if [[ $TRAVIS_OS_NAME == windows && $CMAKE_SHARED == off ]]; then ctest -C Release; fi
   - if [ $TRAVIS_OS_NAME == linux ]; then make; fi
   - if [ $TRAVIS_OS_NAME == linux ]; then ctest; fi
