doxygen friendly; function check

--- a/DuiMini/CMakeLists.txt
+++ b/DuiMini/CMakeLists.txt
@@ -2,6 +2,21 @@
 
 project("DuiMini")
 
+configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/include/UIBuildConfig.h.in
+	${CMAKE_CURRENT_SOURCE_DIR}/include/UIBuildConfig.h
+)
+
+include(CheckFunctionExists)
+
+# check stricmp
+check_function_exists(_stricmp HAVE_STRICMP)
+check_function_exists(strcasecmp HAVE_STRCASECMP)
+
+if(NOT HAVE_STRICMP AND NOT HAVE_STRCASECMP)
+    message(FATAL_ERROR "ERROR: _stricmp or strcasecmp must exist!")
+endif()
+
 # we need C++11
 set(CMAKE_CXX_STANDARD 11)
 
