--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -5,7 +5,7 @@ project("test_duimini")
 macro(make_test name filename)
 	add_executable(${name} "test_main.cpp" ${filename})
 	target_link_libraries(${name} gtest gtest_main DuiMini)
-    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}>)
+    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE})
 endmacro()
 
 # we need C++11
@@ -19,7 +19,13 @@ if(NOT BUILD_SHARED_LIBS)
 	add_definitions(-DUILIB_STATIC)
 endif()
 
+if(MSVC)
+	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
+
 file(COPY "TestRes" DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE})
 
 add_executable(HostFile "Tools/HostFile.cpp")
+
 make_test(test_utils "Utils/test_utils.cpp")
+make_test(test_resource "Core/test_resource.cpp")
