--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ macro(override_option var default type docstring)
 endmacro()
 
 # Output dir
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY $<1:${CMAKE_BINARY_DIR}/Lib/${CMAKE_BUILD_TYPE}>)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY $<1:${CMAKE_BINARY_DIR}/Lib/${CMAKE_BUILD_TYPE}>)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_BINARY_DIR}/Bin/${CMAKE_BUILD_TYPE}>)
 
 override_option(CMAKE_BUILD_TYPE Debug STRING "Choose the type of build (Debug or Release)")
 override_option(BUILD_SHARED_LIBS FALSE BOOL "Build shared libraries (DLLs)")
